--- a/src/Common/gui/ChatPanel.ui
+++ b/src/Common/gui/ChatPanel.ui
@@ -26,16 +26,9 @@
    <property name="bottomMargin">
     <number>6</number>
    </property>
-   <property name="horizontalSpacing">
-    <number>2</number>
+   <property name="spacing">
+    <number>6</number>
    </property>
-   <item row="3" column="1">
-    <widget class="QLineEdit" name="chatText">
-     <property name="accessibleDescription">
-      <string>Type your text to sent on the chat here</string>
-     </property>
-    </widget>
-   </item>
    <item row="1" column="0" colspan="4">
     <widget class="QScrollArea" name="chatScroll">
      <property name="sizePolicy">
@@ -103,6 +96,13 @@
      </property>
      <property name="checkable">
       <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0" colspan="2">
+    <widget class="QLineEdit" name="chatText">
+     <property name="accessibleDescription">
+      <string>Type your text to sent on the chat here</string>
      </property>
     </widget>
    </item>
