--- a/src/resources/jamtaba.css
+++ b/src/resources/jamtaba.css
@@ -45,6 +45,8 @@ PreferencesDialog QGroupBox#groupBoxCustomMetronome[checked=false]
     color: gray;
 }
 
+
+
 QMessageBox,
 QInputDialog,
 PluginScanDialog,
@@ -71,8 +73,8 @@ FxPanel{
    margin: 0px;
    font-size: 8px;
    padding: 1px;
-   padding-top: 2px;
-   padding-bottom: 2px;
+   padding-top: 3px;
+   padding-bottom: 3px;
    border-radius: 1px;
 }
 
@@ -80,20 +82,27 @@ FxPanel{
 #buttonBoostPlus12:checked,
 #buttonBoostZero:checked
 {
-    background-color: rgba(0, 0, 0, 20);
+    background-color: rgb(200, 200, 200);
     color: rgba(0, 0, 0, 160);
+    border-radius: 0px;
 }
 
 #buttonBoostZero:checked
 {
     border-bottom: none;
     border-top: none;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 60);
 }
 
-BaseTrackView[unlighted="true"] #buttonBoostMinus12:checked,
-BaseTrackView[unlighted="true"] #buttonBoostZero:checked,
-BaseTrackView[unlighted="true"] #buttonBoostPlus12:checked{
+BaseTrackView[unlighted="true"] #buttonBoostMinus12,
+BaseTrackView[unlighted="true"] #buttonBoostZero,
+BaseTrackView[unlighted="true"] #buttonBoostPlus12,
+BaseTrackView[unlighted="true"] #soloButton,
+BaseTrackView[unlighted="true"] #muteButton
+{
     background-color: rgba(0, 0, 0, 30);
+    border: none;
 }
 
 /*
@@ -145,22 +154,36 @@ NinjamTrackView[horizontal="true"]{
         stop:1 rgb(200, 200, 200));
 }
 
+NinjamRoomWindow #licenceButton{
+    background-image: url(':/images/licence.png');
+    background-position: center center;
+    background-repeat: none;
+    max-height: 20px;
+    width: 28px;
+}
+
+NinjamRoomWindow QToolButton:hover,
+NinjamRoomWindow #licenceButton:hover{
+    border: 1px solid rgba(0, 0, 0, 50);
+    background-color: rgba(255, 255, 255, 80);
+}
+
+NinjamRoomWindow QToolButton,
+NinjamRoomWindow #licenceButton
+{
+    border: 1px solid rgb(150, 150, 150);
+    background-color: rgba(255, 255, 255, 10);
+}
+
 NinjamRoomWindow QToolButton{
-    border: 1px solid rgba(0, 0, 0, 20);
-    background-color: rgba(0, 0, 0, 8);
-    min-height: 20px;
-    min-width: 24px;
+    height: 20px;
+    min-width: 28px;
     padding: 0px;
 }
 
-NinjamRoomWindow QToolButton:hover{
-    border: 1px solid rgba(0, 0, 0, 50);
-    background-color: rgba(255, 255, 255, 50);
-}
-
 NinjamRoomWindow QToolButton:checked{
-    background-color: rgba(0, 0, 0, 30);
-    border: 1px solid rgba(0, 0, 0, 40);
+    background-color: rgba(255, 255, 255, 60);
+    border: 1px solid rgb(130, 130, 130);
 }
 
 NinjamRoomWindow QToolButton#buttonVerticalLayout{
@@ -173,9 +196,24 @@ NinjamRoomWindow QToolButton#buttonHorizontalLayout{
 }
 
 NinjamRoomWindow QToolButton#wide{
-
     margin: 0px;
 }
+
+NinjamRoomWindow QToolButton#wide:!checked{
+    border-right-color: none;
+}
+
+NinjamRoomWindow QToolButton#narrow:!checked{
+    border-left-color: none;
+}
+
+NinjamRoomWindow QToolButton#buttonVerticalLayout:!checked{
+    border-right-color: none;
+}
+NinjamRoomWindow QToolButton#buttonHorizontalLayout:!checked{
+    border-left-color: none;
+}
+
 NinjamRoomWindow QToolButton#narrow{
 
     margin-left: 0px;
@@ -183,7 +221,7 @@ NinjamRoomWindow QToolButton#narrow{
 
 
 FxPanelItem{
-    background-color: rgba(0, 0, 0, 40);
+    background-color: rgba(0, 0, 0, 55);
     background-position: center right;
     background-repeat: none;
     max-height: 14px;
@@ -218,7 +256,7 @@ FxPanelItem > QPushButton{
      max-height: 10px;
      margin: 0px;
      padding: 0px;
-     border: 1px solid rgba(0, 0, 0, 80);
+     border: 1px solid rgb(0, 120, 0);
      background-color: rgba(0, 0, 0, 120);
 }
 
@@ -228,7 +266,7 @@ FxPanelItem > QPushButton:hover{
 }
 
 FxPanelItem > QPushButton:checked{
-    background-color: rgb(0, 195, 0);
+    background-color: rgb(0, 210, 0);
 }
 
 FxPanelItem > QPushButton:checked:hover{
@@ -258,25 +296,28 @@ QScrollBar:horizontal {
 }
 
 QScrollBar:vertical{
-    width: 9px;
+    width: 14px;
+    margin-left: 6px;
 }
 
 QScrollBar:horizontal{
-    height: 9px;
+    height: 14px;
+    margin-top: 6px;
 }
 
 QScrollBar::handle:vertical,
 QScrollBar::handle:horizontal
 {
   border: 1px solid rgba(0, 0, 0, 45);
-  background-color: rgba(150, 150, 150, 64);
+  background-color: rgba(255, 255, 255, 140);
   margin: 0px;
 }
+
 
 QScrollBar::handle:horizontal:hover,
 QScrollBar::handle:vertical:hover
 {
-    background-color: rgba(91, 91, 91, 64);
+    background-color: rgba(255, 255, 255, 200);
 }
 
 QScrollBar::handle:vertical
@@ -293,26 +334,26 @@ QScrollBar::handle:horizontal
 
 QScrollBar::add-line:vertical {
   border: none;
-  height: 0px;
+  height: 10px;
   subcontrol-position: bottom;
   subcontrol-origin: margin;
 }
 QScrollBar::add-line:horizontal {
-  border: none;/*2px solid red;*/
-  width: 0px;
+  border: none;
+  width: 10px;
   subcontrol-position: left;
   subcontrol-origin: margin;
 }
 
 QScrollBar::sub-line:vertical {
   border: none;
-  height: 0px;
+  height: 10px;
   subcontrol-position: top;
   subcontrol-origin: margin;
 }
 QScrollBar::sub-line:horizontal {
   border: none;
-  width: 0px;
+  width: 10px;
   subcontrol-position: right;
   subcontrol-origin: margin;
 }
@@ -321,49 +362,36 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical, QScrollBar::add-pa
   background: none;
 }
 
-/* ---------- */
-
-/* common widgets */
-
 QLineEdit,
 #userNamePanel{
     padding: 2px;
     color: black;
-    border: 1px solid rgb(160, 160, 160);
     border-radius: 1px;
+    border: 1px solid;
 }
 
 #userNamePanel
 {
-    background-color: rgb(239, 239, 239);
+    background-color: rgb(250, 250, 250);
     border-color: rgb(95, 95, 95);
     padding: 1px;
 }
 
 QLineEdit
 {
-    background-color: #e7e7e7;
+    background-color: rgb(254, 254, 254);
+    border-color: rgba(0, 0, 0, 18);
+    color: rgb(80, 80, 80);
 }
 
 QLineEdit:focus,
 QLineEdit#groupNameField:focus
 {
-    border-color: black;
+    border-color: rgba(0, 0, 0, 70);
+    background-color: white;
+    color: black;
 }
 
-TrackGroupView #groupNameField
-{
-    background: transparent;
-    border-color: rgb(220, 220, 220);
-}
-
-QLineEdit[enabled="false"]
-{
-    padding: 2px;
-    background: rgb(0, 0, 0, 40);
-    color: rgb(0, 0, 0, 50);
-    border: none;
-}
 
 /*  SLIDER ++++++++++++++++++++++++++++++++ */
 
@@ -373,17 +401,17 @@ QSlider::groove:vertical{
 
 QSlider::groove:horizontal{
     background-color: rgba(0, 0, 0, 50);
-    height: 1px;
+    height: 2px;
     border: none;
 }
 
 BaseTrackView #peaksDbLabel{
 
-    border: 1px solid rgba(0, 0, 0, 10);
-    background-color: rgba(0, 0, 0, 15);
+    border: 1px solid rgba(0, 0, 0, 8);
+    background-color: rgba(0, 0, 0, 6);
     font-size: 8px;
     qproperty-alignment: AlignCenter;
-    color: rgba(0,0,0, 120);
+    color: rgba(0, 0, 0, 120);
     padding: 1px;
     min-width: 15px;
 }
@@ -391,11 +419,10 @@ NinjamTrackView #peaksDbLabel{
     border: 1px solid rgba(0, 0, 0, 8);
 }
 
-BaseTrackView[unlighted="true"] #peaksDbLabel,
-BaseTrackView[unlighted="true"] .QPushButton
+BaseTrackView[unlighted="true"] #peaksDbLabel
 {
    border: none;
-   background-color: rgb(100, 100, 100);
+   background-color: rgba(0, 0, 0, 10);
 }
 
 BaseTrackView #peaksDbLabel:hover{
@@ -406,7 +433,7 @@ BaseTrackView #peaksDbLabel:hover{
 
 QSlider::groove:vertical {
     background-color: rgba(0, 0, 0, 50);
-    width: 1px;
+    width: 2px;
 }
 
 QSlider::handle:horizontal {
@@ -437,7 +464,7 @@ BaseTrackView[unlighted="true"] QSlider::handle:vertical
 
 QSlider::handle
 {
-    background: rgb(240, 240, 240);
+    background: rgb(245, 245, 245);
     border: 1px outset rgb(120, 120, 120);
     border-radius: 2px;
 }
@@ -471,9 +498,8 @@ NinjamPanel QSlider::groove:horizontal{
 
 /* +++++++++++++++++++++++++++++++++++++++++++ */
 PeakMeter{
-    background-color: rgba(0, 0, 0, 20);
+    background-color: rgba(0, 0, 0, 6);
     border: none;
-
     min-width: 4px;
     min-height: 4px;
 }
@@ -508,7 +534,7 @@ BaseTrackView[unlighted="true"] PeakMeter{
 /* ++++++++++++++++++++++++++++++++++++++++ */
 
 QMainWindow{
-    background-color: rgb(180, 180, 180);
+    background-color: rgb(200, 200, 200);
     border: 1px solid rgb(90, 90, 90);
 }
 
@@ -518,7 +544,7 @@ QMainWindow #bottomPanel{
 }
 
 #leftPanel{
-   background-color: rgb(132, 132, 132);
+   background-color: rgb(120, 120, 120);
 }
 
 #userNameLineEdit
@@ -559,8 +585,9 @@ QPushButton#localControlsCollapseButton::hover:checked{
 }
 /* ------------------------------ */
 
-#contentTabWidget:pane{
-    background-color: rgb(200, 200, 200);
+#contentTabWidget:pane
+{
+    background-color: rgb(180, 180, 180);
 }
 
 #contentTabWidget:pane,
@@ -580,7 +607,7 @@ QPushButton#localControlsCollapseButton::hover:checked{
 
 QTabBar::tab
 {
-    background-color: rgb(180, 180, 180);
+    background-color: rgb(200, 200, 200);
     border: none;
     min-width: 8ex;
     padding: 3px;
@@ -592,7 +619,7 @@ QTabBar::tab
 QTabBar::tab:selected,
 QTabBar::tab:hover
 {
-    background-color: rgb(200, 200, 200)
+    background-color: rgb(180, 180, 180)
 }
 
 QTabBar::tab:!selected
@@ -649,7 +676,7 @@ BusyDialog > QLabel
 
 JamRoomViewPanel
 {
-    background-color: rgb(245, 245, 245);
+    background-color: rgb(225, 225, 225);
     border: 1px solid rgb(180, 180, 180);
     border-top: none;
     border-left: none;
@@ -731,7 +758,7 @@ BaseTrackView
 
     background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
         stop:0 rgb(240, 240, 240),
-        stop:1 rgb(150, 150, 150));
+        stop:1 rgb(160, 160, 160));
 
     border: 1px solid rgb(61, 61, 61);
     font-size: 8px; /*db value */
@@ -761,7 +788,7 @@ QPushButton:checked{
 QPushButton:hover{
     background-color: white;
     color: black;
-    border: 1px solid black;
+    border: 1px solid rgb(120, 120, 120);
 }
 
 QPushButton[enabled="false"]{
@@ -771,20 +798,28 @@ QPushButton[enabled="false"]{
 }
 
 QPushButton#soloButton,
-QPushButton#muteButton,
-QPushButton#preferencesButton
+QPushButton#muteButton
 {
     font-size: 9px;
     border-color: rgb(110,110,110);
     padding: 2px;
-    padding-left: 3px;
-    padding-right: 3px;
     color: rgb(50,50,50);
 }
 
-NinjamTrackView #soloButton, NinjamTrackView #muteButton{
+#buttonBoostMinus12,
+#buttonBoostPlus12,
+#buttonBoostZero,
+#soloButton,
+#muteButton
+{
+    background: rgb(235, 235, 235);
+}
+
+NinjamTrackView #soloButton,
+NinjamTrackView #muteButton{
    border-color: rgb(95,95,95);
    color: rgb(40,40,40);
+
 }
 
 NinjamTrackView[unlighted="true"]
@@ -987,23 +1022,6 @@ LocalTrackView #midiPeakMeter{
 
 /* NINJAM */
 
-NinjamRoomWindow #licenceButton{
-    background-color: rgba(0, 0, 0, 8);
-    border: 1px solid rgba(0, 0,0, 12);
-
-    background-image: url(':/images/licence.png');
-    background-position: center center;
-    background-repeat: none;
-    min-height: 20px;
-    min-width: 28px;
-}
-
-NinjamRoomWindow #licenceButton:hover{
-    background-color: rgba(0, 0, 0, 30);
-    border: 1px solid rgba(0, 0, 0, 40);
-
-}
-
 NinjamTrackView > #channelName{
     border: none; /* 1px solid rgba(0, 0, 0, 7);*/
     background-color: rgba(0, 0, 0, 6);
@@ -1079,9 +1097,6 @@ NinjamPanel #metronomeControls QSlider::groove:vertical{
     border: 1px inset rgb(140, 140, 140);
 }
 
-NinjamPanel #soloButton, NinjamPanel #muteButton{
-    border: 1px solid rgba(0, 0, 0, 60);
-}
 
 NinjamPanel #preferencesButton,
 NinjamPanel #floatingWindowButton
@@ -1101,6 +1116,11 @@ NinjamPanel #muteButton{
     min-height: 16px;
     padding-top: 1px;
     padding-bottom: 1px;
+}
+
+NinjamPanel #soloButton,
+NinjamPanel #muteButton{
+    background-color: white;
 }
 
 NinjamPanel #preferencesButton{
@@ -1153,6 +1173,18 @@ ChatPanel QPushButton#buttonAutoTranslate{
     background-position: center;
 }
 
+ChatPanel .QLineEdit
+{
+    border-color: rgba(0, 0, 0, 80);
+    background-color: rgb(250, 250, 250);
+}
+
+ChatPanel .QLineEdit:focus
+{
+    border-color: rgba(0, 0, 0, 160);
+    background-color: white;
+}
+
 ChatMessagePanel #labelUserName,
 ChatMessagePanel #messageContent
 {
@@ -1193,6 +1225,7 @@ ChatMessagePanel QPushButton:hover#translateButton{
     font-weight: bold;
 }
 
+
 /* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
 
 ChordsPanel #buttonSendToChat, ChordsPanel #buttonDiscardChords{
@@ -1224,3 +1257,4 @@ ChordLabel[current="true"]{
     color: black;
     border: 1px solid #008F1f;
 }
+
