--- a/src/resources/jamtaba.css
+++ b/src/resources/jamtaba.css
@@ -380,14 +380,14 @@ QLineEdit,
 QLineEdit
 {
     background-color: rgb(254, 254, 254);
-    border-color: rgba(0, 0, 0, 18);
+    border-color: rgba(0, 0, 0, 45);
     color: rgb(80, 80, 80);
 }
 
 QLineEdit:focus,
 QLineEdit#groupNameField:focus
 {
-    border-color: rgba(0, 0, 0, 70);
+    border-color: rgba(0, 0, 0, 90);
     background-color: white;
     color: black;
 }
@@ -1185,38 +1185,28 @@ ChatPanel .QLineEdit:focus
     background-color: white;
 }
 
-ChatMessagePanel #labelUserName,
-ChatMessagePanel #messageContent
-{
-    border: 1px solid rgb(0, 0, 0, 5);
-}
-
-ChatMessagePanel #labelMessage
-{
-    margin: 1px;
+ChatMessagePanel{
+    border: 1px solid rgb(140, 140, 140);
+    padding: 3px;
 }
 
 ChatMessagePanel #labelTimeStamp{
     font-size: 9px;
     font-style: italic;
-    margin: 2px;
 }
 
 ChatMessagePanel #labelUserName{
-    border-bottom: none;
     font-size: 10px;
     font-weight: bold;
-}
-
-ChatMessagePanel #messageContent{
-    border-top: none;
+    padding: 0px;
+    margin-bottom: 1px;
 }
 
 ChatMessagePanel #translateButton{
     height: 6px;
     min-height: 6px;
     padding: 2px;
-    border: 1px solid rgba(0, 0, 0, 30);
+    border: 1px solid rgba(0, 0, 0, 70);
     font-size: 8px;
 }
 
@@ -1224,7 +1214,6 @@ ChatMessagePanel QPushButton:hover#translateButton{
     border-color: black;
     font-weight: bold;
 }
-
 
 /* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
 
