Allow empty user name reported #345
- Remove obsoleted member
- Adding stylesheet for disabled button in user name dialog

--- a/src/resources/jamtaba.css
+++ b/src/resources/jamtaba.css
@@ -95,6 +95,11 @@ QInputDialog QPushButton{
     color: rgb(45,45,45);
 }
 
+QPushButton:disabled
+{
+    background-color: rgba(0, 0, 0, 20);
+    color: rgba(0, 0, 0, 60)
+}
 
 FxPanel{
     border: none;
