--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -1,7 +1,7 @@
 <RCC>
     <qresource prefix="/style">
-        <file>jamtaba.css</file>
-        <file>jamtaba_orange.css</file>
+        <file>Flat.css</file>
+        <file>Rounded.css</file>
     </qresource>
     <qresource prefix="/tr">
         <file alias="en.qm">../../translations/en.qm</file>
